[gd_scene load_steps=7 format=3 uid="uid://ckoo1q4267q8v"]

[ext_resource type="Script" path="res://project scripts/changing lights.gd" id="1_kgirq"]
[ext_resource type="Texture2D" uid="uid://d2hpamf230v20" path="res://project sprites/surroundings/blue lights.aseprite" id="1_p3twi"]
[ext_resource type="Texture2D" uid="uid://lo24drw5qf1p" path="res://project sprites/surroundings/light shape.aseprite" id="2_65l7r"]

[sub_resource type="Animation" id="Animation_drmkx"]
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lights sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"state1"
}, {
"args": [],
"method": &"state2"
}]
}

[sub_resource type="Animation" id="Animation_6s7d4"]
resource_name = "blinking"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lights sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oiqwt"]
_data = {
"RESET": SubResource("Animation_drmkx"),
"blinking": SubResource("Animation_6s7d4")
}

[node name="lights scene" type="Node2D"]
script = ExtResource("1_kgirq")

[node name="lights sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_p3twi")
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oiqwt")
}
autoplay = "RESET"

[node name="point lights" type="Node2D" parent="."]

[node name="light1" type="PointLight2D" parent="point lights"]
unique_name_in_owner = true
position = Vector2(-35, 0)
scale = Vector2(0.796875, 0.796875)
color = Color(0, 0.160784, 0.160784, 1)
energy = 12.32
texture = ExtResource("2_65l7r")

[node name="light2" type="PointLight2D" parent="point lights"]
unique_name_in_owner = true
position = Vector2(-27, 2)
scale = Vector2(0.796875, 0.796875)
color = Color(4.09111e-07, 0.162198, 0.162198, 1)
energy = 12.32
texture = ExtResource("2_65l7r")

[node name="light3" type="PointLight2D" parent="point lights"]
unique_name_in_owner = true
position = Vector2(-18, 4)
scale = Vector2(0.796875, 0.796875)
color = Color(4.09111e-07, 0.162198, 0.162198, 1)
energy = 12.32
texture = ExtResource("2_65l7r")

[node name="light4" type="PointLight2D" parent="point lights"]
unique_name_in_owner = true
position = Vector2(-10, 6)
scale = Vector2(0.796875, 0.796875)
color = Color(4.09111e-07, 0.162198, 0.162198, 1)
energy = 12.32
texture = ExtResource("2_65l7r")

[node name="light5" type="PointLight2D" parent="point lights"]
unique_name_in_owner = true
position = Vector2(-0.375, 5.625)
scale = Vector2(0.796875, 0.796875)
color = Color(4.09111e-07, 0.162198, 0.162198, 1)
energy = 12.32
texture = ExtResource("2_65l7r")

[node name="light6" type="PointLight2D" parent="point lights"]
unique_name_in_owner = true
position = Vector2(9, 6)
scale = Vector2(0.796875, 0.796875)
color = Color(4.09111e-07, 0.162198, 0.162198, 1)
energy = 12.32
texture = ExtResource("2_65l7r")

[node name="light7" type="PointLight2D" parent="point lights"]
unique_name_in_owner = true
position = Vector2(18, 4)
scale = Vector2(0.796875, 0.796875)
color = Color(4.09111e-07, 0.162198, 0.162198, 1)
energy = 12.32
texture = ExtResource("2_65l7r")

[node name="light8" type="PointLight2D" parent="point lights"]
unique_name_in_owner = true
position = Vector2(27, 2)
scale = Vector2(0.796875, 0.796875)
color = Color(4.09111e-07, 0.162198, 0.162198, 1)
energy = 12.32
texture = ExtResource("2_65l7r")

[node name="light9" type="PointLight2D" parent="point lights"]
unique_name_in_owner = true
position = Vector2(35, 0)
scale = Vector2(0.796875, 0.796875)
color = Color(4.09111e-07, 0.162198, 0.162198, 1)
energy = 12.32
texture = ExtResource("2_65l7r")
