extends Node2D


func state1():
	%light1.energy = 12.32
	%light2.energy = 0
	%light3.energy = 12.32
	%light4.energy = 0
	%light5.energy = 12.32
	%light6.energy = 0
	%light7.energy = 12.32
	%light8.energy = 0
	%light9.energy = 12.32

func state2():
	%light1.energy = 0
	%light2.energy = 12.32
	%light3.energy = 0
	%light4.energy = 12.32
	%light5.energy = 0
	%light6.energy = 12.32
	%light7.energy = 0
	%light8.energy = 12.32
	%light9.energy = 0
